# AnswerPace

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
app/: app.js  format.js  index.html  questionParser.js  sample-questions.txt  stats.js  styles.css
scripts/: check-build-prereqs.js  create-icon.js  run-tauri.js  serve-app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test_files/: test_1.txt
tests/: run-tests.js
