[package]
name = "answerpace"
version = "0.1.0"
description = "A lightweight timed answer-writing practice app."
authors = ["AnswerPace"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
